--- a/notebooks/1_synt_dataset_generation.ipynb
+++ b/notebooks/1_synt_dataset_generation.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ellolo/cthulhu_fine_tuning/blob/main/notebooks/1_synt_dataset_generation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "PzeEy40HokSG"
       },
       "source": [
@@ -53,9 +63,9 @@
         "id": "WKP6o8zSEVWP"
       },
       "source": [
-        "## Install dependencies and cloning github repo\n",
+        "#Install dependencies and clone github repo\n",
         "\n",
-        "The github repo is used to store the generated dataset"
+        "We clone this github repo, so that we can push the generated dataset files to it."
       ]
     },
     {
@@ -67,6 +77,8 @@
       },
       "outputs": [],
       "source": [
+        "# install dependencies\n",
+        "\n",
         "%%capture\n",
         "!pip install synthetic-data-kit==0.0.3\n",
         "\n",
@@ -89,34 +101,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UUxYhe_By7Yf",
-        "outputId": "945b0548-abd6-4c7b-a12f-21e1727a221a"
+        "id": "UUxYhe_By7Yf"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "# github.com:22 SSH-2.0-4c545346\n",
-            "Cloning into 'cthulhu_fine_tuning'...\n",
-            "remote: Enumerating objects: 3207, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3199/3199), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (1233/1233), done.\u001b[K\n",
-            "remote: Total 3207 (delta 1986), reused 3168 (delta 1963), pack-reused 8 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (3207/3207), 71.90 MiB | 16.56 MiB/s, done.\n",
-            "Resolving deltas: 100% (1986/1986), done.\n",
-            "Updating files: 100% (2804/2804), done.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# CLONING REPO CONTAINING INPUT DATA\n",
-        "#\n",
-        "# this is also the repo where we will store intermediate data\n",
+        "# Clone github repository.\n",
         "\n",
+        "# Past here the SSH key stored on my personal laptopat: ~/dev/llm_cthulhu_fine_tuning/keys\n",
+        "# This is not safe, but unfortunaly using Colab secrets did not work.\n",
         "! mkdir -p /root/.ssh\n",
         "with open(\"/root/.ssh/id_rsa\", mode=\"w\") as fp:\n",
         "    fp.write(\"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
@@ -171,7 +163,6 @@
         "\n",
         "\"\"\")\n",
         "\n",
-        "# <COPY FROM LOCAL DISK AT: ~/dev/llm_cthulhu_fine_tuning/keys>\n",
         "! ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts\n",
         "! chmod go-rwx /root/.ssh/id_rsa\n",
         "! git clone git@github.com:ellolo/cthulhu_fine_tuning.git"
@@ -181,22 +172,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "qwrudfreSjSG",
-        "outputId": "ed8b97e3-81e2-4fa4-efc0-d0b41c257ac8"
+        "id": "qwrudfreSjSG"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/content/cthulhu_fine_tuning\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%cd /content/cthulhu_fine_tuning\n",
         "! mkdir -p data/{pdf,html,youtube,docx,ppt,txt,output,generated,cleaned,final}"
@@ -1279,7 +1258,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "PzeEy40HokSG",
+        "WKP6o8zSEVWP",
         "0x6sSPHdFKKD",
         "dkP0IH1NFQy1",
         "2zkaCjSiRkGV",
@@ -1289,7 +1268,8 @@
         "MqCFCT0LqM_0",
         "UbsCjaw3pESz"
       ],
-      "authorship_tag": "ABX9TyOiWuRRM8KtylTkDlcJT5xv"
+      "authorship_tag": "ABX9TyPt8QxzvDjbvs/1UVDjIjD3",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
