removed cell outputs

--- a/notebooks/1_synt_dataset_generation.ipynb
+++ b/notebooks/1_synt_dataset_generation.ipynb
@@ -111,57 +111,7 @@
         "# This is not safe, but unfortunaly using Colab secrets did not work.\n",
         "! mkdir -p /root/.ssh\n",
         "with open(\"/root/.ssh/id_rsa\", mode=\"w\") as fp:\n",
-        "    fp.write(\"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
-        "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAACFwAAAAdzc2gtcn\n",
-        "NhAAAAAwEAAQAAAgEApUPD7gz0vInJz1dYlIzxWNa2fuvnUiT/TrVJNk+WUK5+KgLFgK6g\n",
-        "jYWDITJm9gLMVDQwhTtKosHzgnzVvP4PgYlGf5jRcqUrarWiXejYIG9zoKHyi33X1gi2zo\n",
-        "FKAATnycO+XHdGTz3JOrrmlAsvkIKokji3rqWFblDFJ3u0aSeyzHxNs3xJNFGpihBWaAYy\n",
-        "GVQaV14JVdU3PfmyaxmzD77NE53Z/fVk0k72SjNJ/7Ql50OaXpsGXTkySMGCXrihnzajF2\n",
-        "tVJwdxnWKT9Z2/8akLsrg8LhiVcRvWrrElgo63azLrTIaKyv+D827qh4k1pEvmZ+aKjPc0\n",
-        "2Ota9l6JEIhYhnOhtsQwU9Mjcq501Ce4L/qBsDfRFx+qx+vCxZAMc80+Rapbat5jfsNpbp\n",
-        "YhgtXzmTnlIGO0Fc0mX/IKyGTUL/RyV4B0OP6vIAanLS01WIMbkAXfkEdgu1MKvKF8hQGl\n",
-        "GryB1NfEPDBE3jyCljxhBuyFqN5Kp/EVeFiw38AwQAe4+u5VDgy3ZHqcRT/H0UryYjC6S0\n",
-        "nymFB/ObOijWw03W6YKEaOeqE/HNww7CO3MtuAbgwUqNYZF+zOe1v58Mm7xZVzk8+hirok\n",
-        "wQlTl4CYWX/ql0+Jwbz2IpDiX4iCWcOMo40cJmZlYVR4jL54sETNCL91FbkmjP3/YP5Qn6\n",
-        "kAAAdIVX2ag1V9moMAAAAHc3NoLXJzYQAAAgEApUPD7gz0vInJz1dYlIzxWNa2fuvnUiT/\n",
-        "TrVJNk+WUK5+KgLFgK6gjYWDITJm9gLMVDQwhTtKosHzgnzVvP4PgYlGf5jRcqUrarWiXe\n",
-        "jYIG9zoKHyi33X1gi2zoFKAATnycO+XHdGTz3JOrrmlAsvkIKokji3rqWFblDFJ3u0aSey\n",
-        "zHxNs3xJNFGpihBWaAYyGVQaV14JVdU3PfmyaxmzD77NE53Z/fVk0k72SjNJ/7Ql50OaXp\n",
-        "sGXTkySMGCXrihnzajF2tVJwdxnWKT9Z2/8akLsrg8LhiVcRvWrrElgo63azLrTIaKyv+D\n",
-        "827qh4k1pEvmZ+aKjPc02Ota9l6JEIhYhnOhtsQwU9Mjcq501Ce4L/qBsDfRFx+qx+vCxZ\n",
-        "AMc80+Rapbat5jfsNpbpYhgtXzmTnlIGO0Fc0mX/IKyGTUL/RyV4B0OP6vIAanLS01WIMb\n",
-        "kAXfkEdgu1MKvKF8hQGlGryB1NfEPDBE3jyCljxhBuyFqN5Kp/EVeFiw38AwQAe4+u5VDg\n",
-        "y3ZHqcRT/H0UryYjC6S0nymFB/ObOijWw03W6YKEaOeqE/HNww7CO3MtuAbgwUqNYZF+zO\n",
-        "e1v58Mm7xZVzk8+hirokwQlTl4CYWX/ql0+Jwbz2IpDiX4iCWcOMo40cJmZlYVR4jL54sE\n",
-        "TNCL91FbkmjP3/YP5Qn6kAAAADAQABAAACAEaWEH/C4d8LPPqFlIxyPH0UzAKe0IC505/y\n",
-        "9y+uw4V3WeSopWGmdGWt0kmiBO7rWAlY9yZYojKtA0xG9GWR396UWtuR0leUq1wa8xwIIR\n",
-        "ONdsXzlaw1ljPRKf8+onQqpDN9mvdUbF/ZBHNEs8okku62l7hIaE+8W6a38dVA1VgagBgt\n",
-        "uWRBX+TsQiz5eGZayxgdX1jUjcku1bbvSODMq7m8ZUwNHjgFkUfwOOqNSHxiHdROgAcLUK\n",
-        "cNkGgZ2oyJcGKXzAXrLoYKfGDb41VDSOG3MYtmfDG2B1I1sTaQ6/P87+Nl7rETQAGfK+UU\n",
-        "CTDVjmc7kc/r3F6EEXra31GeJA0OrsWt8o5lLO40DQLQVnta3xxQHNVIMlSOjgEVTd7MrC\n",
-        "a81v07L5dLTEAj73guKFHYnRT/Ixd1AKYrX7OhMeVGN9sJn7y7FYD4m+gF3T+et2VOWw0R\n",
-        "RuQyjoCopnlH+Lo24yJk/XSsQL3IVHasTCaThMz/km7AH7KktxK7/SNx7PwOuOU6076IMd\n",
-        "37eawrIg5ecoEAp1MKfMJUG2jcN1Xl7RFpJaDuCu7qsFfjiSEPnVh6yQUkyMBuzni8mLna\n",
-        "588TxVp9V3P6y9XZyDMeBN671u3Ro8HCxEJEQxTZoFgxdpaUQ0kO4oy7FrJxd22GkldMyi\n",
-        "r856D7O+NORiFPWy//AAABABJLjG39AtIOBh+4mkIpT0FdWWqyTBwJdb+t3DyP+vIpLxmg\n",
-        "U0dsTKVcAudwjr9Dv9XfA/BejcNhMvlzB9ob0NUi7tKTg8Xo2JhZQvpnQkBEavlTLm6rgN\n",
-        "l3egQf8tIHCLfZ5+aF+mwODibIRK7kBTWlc7ln586JIonhgWzm0g3sD23LG0YW/2cCgi0r\n",
-        "qtZQ6lUsJGFJGOUrZnomHnS9woCxS+BeEH4uE8lzXr5/0NvxmAGhHX9kt2fmwZWicrfqnu\n",
-        "Crd5RDp9Dpe/iQzyvJssiSPvUFEwTOQEmO5Ce/kNPA0hKpBWYRoQpkVdnPsgEOFiZIqmbR\n",
-        "vUu6I6zqxsNA09YAAAEBAOHLauNS72FUrybBrDoq5cvdTsg9yayMbuNsVGLHX/GOZWCkLF\n",
-        "b9E7200i28rrz4Ue6QwsOTuabGT18Y2cTVQmiTaQzOLCu9IA7p90r14zb18V0KXyrV4Tlm\n",
-        "YpfY+gqyWbiSgaTIHgZFW6qT+/kHKi8Wj/yx3NVtJFYefMcHl71wF90au+l9u+CGQkyZ1w\n",
-        "yYXFIe9RmJt6uuLjoT55wdit63OdfGxTDIzdaLW3FHlxcgk7NmIYslHhLBBnSbM+olKGjh\n",
-        "R7dkOzTuB2S76hOOLMSkFGUozYcscgLKlFGriZJjRzMzlnTyplH8WOp8NHUB3syy9/sSrJ\n",
-        "rGDMftPsTff9MAAAEBALtfb4XvNoa/PhryNEycwbq9w0rrp8JL45ia6r7fgs6YJSReHwfr\n",
-        "Lb/PtXDFay+dVNZwnCzQT1Ha9y40KhXpDEGFWBGwvcNnFhm1ZTl4TqPlSnFdTS+P6PE+vY\n",
-        "Fsva2mLxNEBLjQPQPPpE1aAmrRsH3hG1OAbCa7F5BufTiz7WsHnvwSZpXgmudhkAZZGQYb\n",
-        "6/0X7pUJBkm0N4XIjl6dreTMxL6iERx1eQM/S1k97tqH1RUqrLxdcEWvEygB1WpqyiEFrM\n",
-        "q41tWqMTkadBD5lyg91y2OHcV5a5R+/9fLKUxVrkKvMziRlMU8uNPD6pggf5P0g/uv3t/g\n",
-        "fAVid9m6cRMAAAARcm9vdEBjMjhlMjE0Y2Q1OGYBAg==\n",
-        "-----END OPENSSH PRIVATE KEY-----\n",
-        "\n",
-        "\"\"\")\n",
+        "    fp.write(\"\"\"<YOUR SSH KEY TO THE REPO>\"\"\")\n",
         "\n",
         "! ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts\n",
         "! chmod go-rwx /root/.ssh/id_rsa\n",
@@ -198,7 +148,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vS9euWyfs_p8",
-        "outputId": "0c29026a-0b99-42ab-a6eb-88f3c24d126a"
+        "outputId": "0c29026a-0b99-42ab-a6eb-88f3c24d126a",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -236,7 +187,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cEtrDYmFvGjx",
-        "outputId": "29fd6516-6110-47c9-d06e-12a870ce97ab"
+        "outputId": "29fd6516-6110-47c9-d06e-12a870ce97ab",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -281,7 +233,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6fmDsVsGg8yX",
-        "outputId": "e0ce5c75-d25b-466f-e589-6a8c0cf4c9ba"
+        "outputId": "e0ce5c75-d25b-466f-e589-6a8c0cf4c9ba",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -397,7 +350,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O5oGHqbljBog",
-        "outputId": "5d2da72b-aff1-40e1-de20-6763a34e4a5e"
+        "outputId": "5d2da72b-aff1-40e1-de20-6763a34e4a5e",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -748,39 +702,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "F7UxxCbVqSRH",
-        "outputId": "233544df-9c5e-4f98-a04a-21200bb266ae"
+        "id": "F7UxxCbVqSRH"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Fri May 16 10:42:14 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  NVIDIA A100-SXM4-40GB          Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   41C    P0             58W /  400W |     423MiB /  40960MiB |      0%      Default |\n",
-            "|                                         |                        |             Disabled |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "+-----------------------------------------------------------------------------------------+\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!  nvidia-smi"
       ]
@@ -789,24 +713,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_U58-9XSqUIr",
-        "outputId": "32a7e383-a6b6-48a3-9a04-e9a2bfe1498b"
+        "id": "_U58-9XSqUIr"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                     USER        PID ACCESS COMMAND\n",
-            "/dev/nvidia0:        root        717 F...m python3\n",
-            "/dev/nvidiactl:      root        717 F...m python3\n",
-            "/dev/nvidia-uvm:     root        717 F...m python3\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# check pids running on gpu\n",
         "! sudo fuser -v /dev/nvidia*"
@@ -1010,25 +919,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QU9P09kB5XMK",
-        "outputId": "e77f13ec-de49-4488-9277-51ce346fb083"
+        "id": "QU9P09kB5XMK"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting pdf...\n",
-            "\u001b[2K\u001b[32m⠏\u001b[0m Processing data/pdf/cthulhu.pdf...\n",
-            "\u001b[1A\u001b[2K\u001b[32m Text successfully extracted to \u001b[0m\u001b[1;32mdata/output/cthulhu.txt\u001b[0m\n",
-            "Tokenizing and chunking...\n",
-            "560 ['data/output/cthulhu_0.txt', 'data/output/cthulhu_1.txt', 'data/output/cthulhu_2.txt']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# PREPARE TEXT INTO CHUNKS\n",
         "#\n",
@@ -1119,78 +1012,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "collapsed": true,
-        "id": "kCYsIDeeiipe",
-        "outputId": "543c8bb0-14fb-4662-99a8-670bb4417e27"
+        "id": "kCYsIDeeiipe"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[2KProcessing 5 chunks to generate QA pairs...\n",
-            "\u001b[2KBatch processing complete.\n",
-            "\u001b[2KGenerated 25 QA pairs total\n",
-            "\u001b[2KSaving result to data/generated/cthulhu_160_qa_pairs.json\n",
-            "\u001b[2KSuccessfully wrote test file to data/generated/test_write.json\n",
-            "\u001b[2KSuccessfully wrote result to data/generated/cthulhu_160_qa_pairs.json\n",
-            "\u001b[2K\u001b[32m⠸\u001b[0m Generating qa content from data/output/cthulhu_160.txt...\n",
-            "\u001b[1A\u001b[2K\u001b[32m Content saved to \u001b[0m\u001b[1;32mdata/generated/cthulhu_160_qa_pairs.json\u001b[0m\n",
-            "\u001b[2KProcessing 6 chunks to generate QA pairs...\n",
-            "\u001b[2KBatch processing complete.\n",
-            "\u001b[2KGenerated 24 QA pairs total\n",
-            "\u001b[2KSaving result to data/generated/cthulhu_44_qa_pairs.json\n",
-            "\u001b[2KSuccessfully wrote test file to data/generated/test_write.json\n",
-            "\u001b[2KSuccessfully wrote result to data/generated/cthulhu_44_qa_pairs.json\n",
-            "\u001b[2K\u001b[32m⠋\u001b[0m Generating qa content from data/output/cthulhu_44.txt...\n",
-            "\u001b[1A\u001b[2K\u001b[32m Content saved to \u001b[0m\u001b[1;32mdata/generated/cthulhu_44_qa_pairs.json\u001b[0m\n",
-            "\u001b[2KProcessing 7 chunks to generate QA pairs...\n",
-            "\u001b[2KBatch processing complete.\n",
-            "\u001b[2KGenerated 0 QA pairs total\n",
-            "\u001b[2KSaving result to data/generated/cthulhu_251_qa_pairs.json\n",
-            "\u001b[2KSuccessfully wrote test file to data/generated/test_write.json\n",
-            "\u001b[2KSuccessfully wrote result to data/generated/cthulhu_251_qa_pairs.json\n",
-            "\u001b[2K\u001b[32m⠸\u001b[0m Generating qa content from data/output/cthulhu_251.txt...\n",
-            "\u001b[1A\u001b[2K\u001b[32m Content saved to \u001b[0m\u001b[1;32mdata/generated/cthulhu_251_qa_pairs.json\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n",
-            "\u001b[31mL Error: VLLM server not available at \u001b[0m\u001b[4;94mhttp://localhost:8000/v1\u001b[0m\n",
-            "\u001b[33mPlease start the VLLM server with:\u001b[0m\n",
-            "\u001b[1;34mvllm serve unsloth/Llama-\u001b[0m\u001b[1;36m3.2\u001b[0m\u001b[1;34m-3B-Instruct\u001b[0m\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-52-d19ece1c0fa8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfilenames_to_do\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'synthetic-data-kit          -c synthetic_data_kit_config.yaml          create {fname}          --num-pairs 25          --type \"qa\"'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Sleep some time to leave some room for processing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import time\n",
         "for fname in filenames_to_do[:30]:\n",
@@ -1213,13 +1037,6 @@
         "\n",
         "This was used to check the status, metrics, etc of the vllm server, in an attempt to debug it. However thee is not endpoint for debug messages, therefore ended up not using this,"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "O1J1zk91_NBt"
-      },
-      "source": []
     },
     {
       "cell_type": "code",
@@ -1268,7 +1085,7 @@
         "MqCFCT0LqM_0",
         "UbsCjaw3pESz"
       ],
-      "authorship_tag": "ABX9TyPt8QxzvDjbvs/1UVDjIjD3",
+      "authorship_tag": "ABX9TyOIy3+7rWyosEfA1oRzUBEy",
       "include_colab_link": true
     },
     "kernelspec": {
